--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Welcome to the Main Page for Web API for Games</h1>
+
+    <h2>My Top 10 Games</h2>
+    <ol>
+        <li>Baldur's Gate 3</li>
+        <li>Elden Ring</li>
+        <li>Dark Souls</li>
+        <li>Hollow Knight</li>
+        <li>Minecraft</li>
+        <li>Sekiro</li>
+        <li>Assassin's Creed 4</li>
+        <li>Resident Evil 4</li>
+        <li>Cuphead</li>
+        <li>Dark Souls 3</li>
+    </ol>
+
+    <p>
+        I chose this topic for my ordered list because I love games and these are some of my favorites. The order is not entirely accurate, I wasn't sure about where to place certain games. Overall though these are definitely my favorites. I like difficult games with exciting boss fights.
+    </p>
+
+    <a href="html/login.html">Login</a>
+    <a href="html/addItem.html">Add an Item to List</a>
 </body>
 </html>
